--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
 /* need to override the GDS Transport font by setting the font-family variables */
-$govuk-font-family: "Lato", "Open Sans", sans-serif;
-$govuk-font-family-tabular: "Lato", "Open Sans", sans-serif;
+$govuk-font-family: "Inter", "Open Sans", sans-serif;
+$govuk-font-family-tabular: "Inter", "Open Sans", sans-serif;
 $govuk-root-font-size: 18px;
 
 $govuk-assets-path: "/assets/govuk/assets/";
